2010-04-01  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in, src/Makefile.am: Add -std=gnu99 -W -Wall if using
	  gcc, fix CFLAGS usage.

2010-03-14  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c: Put 'Port %s' under gettext. By Jorma Karvonen.

	* src/config.c: Make sure the global config file is world readable,
	  Redhat patch.
	
	* src/updown.c: Removed static buffers that limit multi-file
	  zmodem functionality. (Redhat #98654)
	
	* src/vt100.c: Check vttrans to prevent segfaults with certain
	  ESC sequences. (Fedora #84129)

	* src/file.c: Fix error handling for the case when you attempt
	  to "goto" a dir that doesn't exist. (Fedora #103902)
	
	* src/file.c, src/util.c: Consider files names with spaces,
	  Fedora Patch 98655 and Debian Patch #199924.

	* src/config.c: Do not exit if no global config file is there,
	  we do not require it.
	
	* po/fi.po: Update from translation team.

2010-03-11  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* configure.in: change check for termcap.h to only check for
	  termcap.h if ncurses/termcap.h was not found, so that not
	  both are enabled.

2010-03-09  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/window.c: remove include of termcap.h because it's already
	  done in a better way from port.h

2010-02-07  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/minicom.c, po/*.po: Don't use carriage return
	  in internationalized strings

	* src/script.c: Make variables seq and toact volatile to fix
	  setjmp warning. By Pavel Roskin.

	* src/main.c: Fix aliasing warning. By Pavel Roskin.

	* src/dial.c, src/file.c: Define what_lens as int, not as size_t.
	  By Pavel Roskin.

	* src/main.c: Better handling of ncurses const'ness. By Pavel Roskin.

	* src/main.c, src/wkeys.c, src/minicom.c: Fix crash when terminal
	  reads return EOF. By Pavel Roskin.

2010-01-05  Adam Lackorzynski  <adam@os.inf.tu-dresden.de>

	* src/main.c: Fix status line to redraw only if necessary.
